ADMISSION/Admission_PSA_Enforce-baseline.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project6ns-enforce-baseline 
  labels:
    # Enforce Baseline level
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest 

    # Audit and warn about Restricted potential restrictions
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest 
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
