ADMISSION/Admission_PSA_Enforce-privileged.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project5ns-enforce-privileged 
  labels:
    # Enforce Privileged level
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: v1.27

    # Audit and warn about Baseline potential restrictions
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/audit-version: v1.27
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/warn-version: v1.27
