ADMISSION/Admission_PSA_Enforce-restricted.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project7ns-enforce-restricted 
  labels:
    # Enforce Restricted level
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.27

    # Audit and warn about Restricted potential restrictions
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: v1.27
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: v1.27
