ADMISSION/Admission_Kyverno_Validate_Check-namespace-owner.yaml
apiVersion: kyverno.io/v1
# The `ClusterPolicy` kind applies to the entire cluster.
kind: ClusterPolicy
metadata:
  name: adm-cp-check-ns-owner-label 

# The `spec` defines properties of the policy.
spec:
  # The `validationFailureAction` tells Kyverno if the resource being validated should be allowed but reported (`Audit`) or blocked (`Enforce`).
  validationFailureAction: Enforce
  validationFailureActionOverrides:
    - action: Audit   # Action to apply
      namespaces:     # List of affected namespaces
        - test

  # The `rules` is one or more rules which must be true.
  rules:
  - name: adm-rule-require-ns-owner-label
    # The `match` statement sets the scope of what will be checked. In this case, it is any `Namespace` resource.
    match:
      any:
      - resources:
          kinds:
          - Namespace
    # The `validate` statement tries to positively check what is defined. 
    # If the statement, when compared with the requested resource, is true, it is allowed. 
    # If false, it is blocked.
    validate:
      # The `message` is what gets displayed to a user if this rule fails validation.
      message: "You must have label `owner` indicating who created the namespace" 
      # The `pattern` object defines what pattern will be checked in the resource. 
      # In this case, it is looking for `metadata.labels` with `owner=<creator name>`.
      pattern:
        metadata:
          labels:
            owner: "?*"
